# win11-oneocr

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bcrypt_hook.cpp  bcrypt_hook.h  build_and_run.bat  ocr.cpp  oneocr.h  oneocr_test.cpp  oneocr_test.py  oneocr_test_result.json  oneocr_wrapper.cpp  onnx_dump.cpp  onnx_dump.h  test_wechatocr.json  visualize.py
cmake/: copy_release_artifacts.cmake
